<resources>
    <string name="app_name">MONDAY REMINDER</string>
    <string name="return_button">Retour</string>
    <string name="menu_button">Menu</string>
    <string name="menu_home">Accueil</string>
    <string name="menu_my_events">Mes évènements</string>
    <string name="menu_my_friends">Mes amis</string>
    <string name="menu_account">Mon compte</string>
    <string name="menu_logout">Déconnexion</string>
    <string name="new_event_button">Créer un évènement</string>
    <string name="event_title_text_view">Nom de l\'évènement</string>
    <string name="create_event_button">Créer l\'évènement</string>
    <string name="event_form_date_text_view">Date de l\'évènement</string>
    <string name="event_form_title_empty_message">Veuillez renseigner le nom de l\'évènement</string>
    <string name="event_form_title_length_message">Nombre minimum de caractères pour le titre : </string>
    <string name="event_form_description_text_view">Description de l\'évènement</string>
    <string name="event_form_description_empty_message">Veuillez renseigner la description de l\'évènement</string>
    <string name="event_form_description_length_message">Nombre minimum de caractères pour la description : </string>
    <string name="event_form_cycle_text">Répétition</string>
    <string name="home_page_welcome_message">Bonjour</string>
    <string name="event_view_participating_no_button">Je ne participe pas</string>
    <string name="event_view_participating_yes_button">Je participe</string>
    <string name="event_view_participating_wait_button">Peut-être</string>
    <string name="participants_view_event_name">Participants pour</string>
    <string name="error_updating_participation_status">Erreur : le changement de statut n\'a pas été appliqué</string>
    <string name="success_updating_participation_status">Votre statut a été mis à jour</string>
    <string name="PARTICIPATING_NO_TEXT">Non</string>
    <string name="PARTICIPATING_YES_TEXT">Oui</string>
    <string name="PARTICIPATING_WAIT_TEXT">En attente</string>
    <string name="add_friend_label">Ajouter un ami :</string>
    <string name="add_friend_input">Adresse email</string>
    <string name="add_friend_button">Ajouter</string>
    <string name="delete_friend_button">Supprimer</string>
    <string name="friends_list_label">Liste de mes amis :</string>
    <string name="open_invitations_list_button">Liste des invitations</string>
    <string name="loading_data_message">Chargement des données…</string>

</resources>
